apps/visa/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: visa
  namespace: nori-cloud
  labels:
    app: visa
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`visa.norriswu.me`)
      kind: Rule
      services:
        - name: visa
          port: 3000
